--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,29 +1,38 @@
-    name: Deploy Astro to GitHub Pages
+name: Deploy to GitHub Pages
 
-    on:
-      push:
-        branches:
-          - main # or your primary branch
+on:
+  # Trigger the workflow every time you push to the `main` branch
+  # Using a different branch name? Replace `main` with your branch’s name
+  push:
+    branches: [main]
+  # Allows you to run this workflow manually from the Actions tab on GitHub.
+  workflow_dispatch:
 
-    jobs:
-      build-and-deploy:
-        runs-on: ubuntu-latest
-        steps:
-          - name: Checkout repository
-            uses: actions/checkout@v3
+# Allow this job to clone the repo and create a page deployment
+permissions:
+  contents: read
+  pages: write
+  id-token: write
 
-          - name: Setup Node.js
-            uses: actions/setup-node@v3
-            with:
-              node-version: '22' # or your preferred Node.js version
+jobs:
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout your repository using git
+        uses: actions/checkout@v4
+      - name: Install, build, and upload your site output
+        uses: withastro/action@v4
+        with:
+            node-version: 22 # The specific version of Node that should be used to build your site. Defaults to 22. (optional)
+            package-manager: npm@latest # The Node package manager that should be used to install dependencies and build your site. Automatically detected based on your lockfile. (optional)
 
-          - name: Install dependencies
-            run: npm ci # or yarn install / pnpm install
-
-          - name: Build Astro project
-            run: npm run build # or yarn build / pnpm build
-
-          - name: Deploy to GitHub Pages
-            uses: withastro/action@v0.5.0 # Use the latest version
-            with:
-              path: ./dist # Adjust if your build output directory is different
+  deploy:
+    needs: build
+    runs-on: ubuntu-latest
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    steps:
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
